<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <ImageView
            android:id="@+id/ic_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_app_logo"
            android:contentDescription="@string/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="-20dp">

            <TextView
                android:id="@+id/title_News"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="60sp"
                android:text="@string/news" />

            <TextView
                android:id="@+id/title_App"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondary"
                android:textSize="60sp"
                android:text="@string/app"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp">

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/edUserName"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:hint="@string/enter_username"/>

            <TextView
                android:id="@+id/btnRegister"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14sp"
                android:textStyle="bold"
                android:clickable="true"
                android:text="@string/dont_have_a_account"
                android:textColor="@color/colorSecondaryDark"
                android:focusable="true" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:text="Login"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btnExit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:text="@string/exit"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>