<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="-70dp"
    tools:context=".SplashScreenActivity">


    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_app_logo"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="-20dp">

        <TextView
            android:id="@+id/title_News"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="60sp"
            android:text="@string/news" />

        <TextView
            android:id="@+id/title_App"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondary"
            android:textSize="60sp"
            android:text="@string/app"/>
    </LinearLayout>

</LinearLayout>